# dhis2api

./: .buildinfo  .gitignore  README.md  example.html  genindex.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.github/workflows/: gh-pages.yml  publish.yaml
_build/.doctrees/: README.doctree  environment.pickle  example.doctree
_build/.doctrees/api/: dhis2api.country.doctree  dhis2api.doctree  dhis2api.generate_params.doctree  dhis2api.indicator_loader.doctree  dhis2api.param_formatter.doctree  modules.doctree
_build/html/: README.html  example.html  search.html
_build/html/_sources/api/: dhis2api.country.rst  dhis2api.generate_params.rst  dhis2api.param_formatter.rst  dhis2api.rst
_build/html/api/: dhis2api.generate_params.html  dhis2api.html  dhis2api.param_formatter.html  modules.html
_build/jupyter_execute/: example.ipynb
_sources/: README.md  example.ipynb
_sources/api/: dhis2api.indicator_loader.rst  modules.rst
api/: dhis2api.country.html  dhis2api.generate_params.html  dhis2api.html  dhis2api.indicator_loader.html  dhis2api.param_formatter.html  modules.html
dhis2api/: __init__.py  country.py
docs/: _config.yml  _toc.yml  example.ipynb
example/: example.ipynb
