[tool.poetry]
name = "dhis2py"
version = "0.1.0"
description = ""
authors = ["Charlie Zhang <cz317@georgetown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.2"
aiofiles = "^24.1.0"
pandas = "^2.2.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
